--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-materialize": "^3.5.9",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-table-filter": "^2.0.1",
     "rsuite": "^4.2.0",
     "uuid": "^3.4.0"
   },
