--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-table-filter": "^2.0.1",
+    "reactjs-popup": "^1.5.0",
     "rsuite": "^4.2.0",
     "uuid": "^3.4.0"
   },
