--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-table-filter": "^2.0.1",
     "reactjs-popup": "^1.5.0",
     "rsuite": "^4.2.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
