--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-materialize": "^3.5.9",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-table-filter": "^2.0.1",
     "reactjs-popup": "^1.5.0",
-    "rsuite": "^4.2.0",
-    "uuid": "^3.4.0",
-    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rsuite": "^4.2.0",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
