--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-table-filter": "^2.0.1",
+    "react-tabs": "^3.1.0",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
