--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cartrust",
   "version": "0.1.0",
-  "proxy":"https://reg.cartrust.co.th/",
+  "proxy": "https://reg.cartrust.co.th/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.3",
@@ -18,6 +18,7 @@
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-calendar": "^2.19.2",
+    "react-currency-format": "^1.0.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-materialize": "^3.5.9",
